[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/lobo_inimigo-Sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.4259, 8.066 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.3565, 7.65247 )

[sub_resource type="Animation" id=3]
resource_name = "die"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseArmoredDemo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 8 ]
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseArmoredDemo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseArmoredDemo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14 ]
}

[node name="enemy" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="BaseArmoredDemo" type="Sprite" parent="."]
position = Vector2( -0.811874, -4.8105 )
scale = Vector2( 0.8, 0.8 )
z_index = 1
texture = ExtResource( 1 )
vframes = 4
hframes = 4
frame = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.962009, -0.182644 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( -60, 0 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.907366, -0.127885 )
scale = Vector2( 1.6156, 0.80817 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.892622, 0.2079 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 3 )
anims/run = SubResource( 4 )
anims/walk = SubResource( 5 )
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
